--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# OSX
+#
+.DS_Store
+
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+
 # Logs
 logs
 *.log
@@ -35,3 +59,16 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Android/IJ
+#
+*.iml
+.idea
+.gradle
+local.properties
+
+# BUCK
+buck-out/
+\.buckd/
+android/app/libs
+android/keystores/debug.keystore
