--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
       android:theme="@style/AppTheme">
       <meta-data
           android:name="JW_LICENSE_KEY"
-          android:value="{YOUR_LICENCE_KEY}" />
+          android:value="httdTJAR8bASXVBz67FM8oRmgtmEf307xYqsMg==" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
