--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.35.0",
-    "react-native-3deye-video": "file:///home/ivan/projects/react-native-3deye-video"
+    "react-native-3deye-video": "file:../"
   },
   "jest": {
     "preset": "jest-react-native"
