--- a/.editorconfig
+++ b/.editorconfig
@@ -11,9 +11,8 @@ insert_final_newline = true
 # Set default charset
 [*.js]
 charset = utf-8
-
-[*.js]
 indent_style = tab
+indent_size = 4
 
 [*.json]
 indent_style = space
