Updated ExoPlayer to 2.3.1.

--- a/example/package.json
+++ b/example/package.json
@@ -7,9 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.3.2",
-    "react-native": "0.35.0",
-    "react-native-3deye-video": "file:../"
+    "react": "15.4.1",
+    "react-native": "0.41.0",
+    "react-native-exoplayer": "file:../"
   },
   "jest": {
     "preset": "jest-react-native"
@@ -17,8 +17,9 @@
   "devDependencies": {
     "babel-jest": "16.0.0",
     "babel-preset-react-native": "1.9.0",
-    "jest": "16.0.1",
+    "jest": "18.0.0",
     "jest-react-native": "16.0.0",
-    "react-test-renderer": "15.3.2"
+    "react-test-renderer": "15.4.1",
+    "whatwg-fetch": "1.0.0"
   }
 }
