--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'VideoPlayer'
 
 include ':app'
-include ':react-native-3deye-video'
-project(':react-native-3deye-video').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-3deye-video/android')
+include ':react-native-exoplayer'
+project(':react-native-exoplayer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-exoplayer/android')
